# modact

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
interfaces/: README.md
interfaces/PlatEMO/: CS1.m
interfaces/cpp/: Makefile  modact_problems.h  test_modact.cpp
interfaces/cpp/borg/: CMakeLists.txt  modact_borg.cpp
interfaces/cpp/borg/borg_src/: CMakeLists.txt
interfaces/cpp/nomad/: CMakeLists.txt  modact_nomad.cpp
modact/: _version.py  actuator.py  materials.py  meshutils.py  problems.py  util.py
modact/interfaces/: pymoo.py
modact/models/: __init__.py  base.py  gears.py  motors.py
scripts/: info.py  run_nsga2.py  run_nsga3.py
tests/: test_actuator.py  test_base.py  test_decode.py  test_gears.py  test_motors.py  test_problems.py
